--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
                         <li class="nav__item"><a href="#exp" class="nav__link">Experience</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Video Presentation</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Video Presentation</a></li>
                     </ul>
                 </div>
 
@@ -49,17 +47,17 @@
                         </h1>
                         <h1 class="home__title-color"></h1>
 
-                    <a href="" class="button">Contact</a>
-                    <a href="" class="button">Resume</a>
-                    <a href="" class="button"></a>
-
-                    <a href="https://drive.google.com/drive/folders/1hBRmpja1rfWFQPezTY0Er7bzIJACFM3w" class="button">My Project</a>
+                    <a href="#contact" class="button">Contact</a>
+                    <a href="https://drive.google.com/file/d/1rhC3dkFfMi9Lh66Vaywt-O17FAGjFkeL/view?usp=drive_link" class="button">Video1</a>
+                    <a href="https://drive.google.com/file/d/10Yz_VXdJIzjFSetLc9PJbh4vI9A0f27B/view?usp=drive_link" class="button">Video2</a>
+                    <a href="https://drive.google.com/file/d/1sHjDPKJVhagyeCR8coq00ObtPnXqXlvm/view?usp=drive_link" class="button">Resume</a>
+                    <a href="https://drive.google.com/file/d/1x9LjY56Fs6-zWKUV7oHdByoqE1ynpYX1/view?usp=drive_link" class="button">Resume2</a>
+                    <a href="https://drive.google.com/file/d/1lJqh8lXkBKApqkIcKmx07ejVTDfvpR7j/view?usp=drive_link" class="button">Resume3</a>
 
                 </div>
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/brian-kibet-147370272" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
                     <a href="https://github.com/murkong" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
@@ -171,8 +169,41 @@
                     </div>
                     
                     <div>              
-                        <img src="assets/img/work3.jpg" alt="" class="skills__img">
+                        <img src="assets/img/black1.jpg" alt="" class="skills__img">
                     </div>
+                </div>
+            </section>
+        <!-- =====CERTIFICATIONS===== -->
+            <section class="work section" id="edu">
+                <h2 class="section-title">Education and Certifications</h2>
+
+                <div class="work__container bd-grid">
+                    <a href="" class="work__img">
+                        <img src="assets/img/dekut.png" alt="">
+                        <p  style="text-align: center; font:bold;" style="padding-top: 20px;font:bold;">Bachelors of Science in Information Technology </p>
+                         <p style="text-align: center; font:bold;"> September 2020 - current</p>
+                    </a>
+                    <a href="" class="work__img">
+                        
+                        <img src="assets/img/Instana_by_IBM_Technical_Sales_Intermediate_Badge20230531-28-topzka_page-0001.jpg" alt="align:center;">
+                        <p style="text-align: center; font:bold;">Technical Sales</p>
+                    </a>
+                    <a href="" class="work__img">
+                        <img src="assets/img/NSE_1_Certification_page-0001.jpg" alt="">
+                        <p style="text-align: center; font:bold;">NSE 1</p>
+                    </a>
+                    <a href="" class="work__img">
+                        <img src="NSE_2_Certification_page-0001.jpg" alt="">
+                        <p style="text-align: center; font:bold;">Python</p>
+                    </a>
+                    <a href="" class="work__img">
+                        <img src="IBM_Supply_Chain_Intelligence_Suite_Technical_Sales_Intermediate_Badge20230531-28-5mklk8_page-0001" alt="">
+                        <p style="text-align: center; font:bold;">Supply Chaine Suite</p>
+                    </a>
+                    <a href="" class="work__img">
+                        <img src="IBM_Power_Systems_Virtual_Server_Technical_Sales_Intermediate_Badge20230604-28-v0xb6j_page-0001.jpg" alt="">
+                        <p style="text-align: center; font:bold;">IBM Power Systems</p>
+                    </a>
                 </div>
             </section>
 
@@ -201,8 +232,8 @@
         <footer class="footer">
             <p class="footer__title">Brian Kibet Murkong Tandui</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://www.facebook.com/" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://www.instagram.com/brianmurkong" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://twitter.com/brayoountamed" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
             <p class="footer__copy">&#169; 2024. All rigths reserved</p>
