--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
                         <img src="NSE_2_Certification_page-0001.jpg" alt="">
                         <p style="text-align: center; font:bold;">NSE 2</p>
                     </a>
-                    <a href="" class="work__img">
-                        <img src="IBM_Supply_Chain_Intelligence_Suite_Technical_Sales_Intermediate_Badge20230531-28-5mklk8_page-0001" alt="">
+                    <!-- <a href="" class="work__img">
+                        <img src="IBM_Supply_Chain_Intelligence_Suite_Technical_Sales_Intermediate_Badge20230531-28-5mklk8_page-0001.jpg" alt="">
                         <p style="text-align: center; font:bold;">Supply Chain Suite</p>
                     </a>
                     <a href="" class="work__img">
                         <img src="IBM_Power_Systems_Virtual_Server_Technical_Sales_Intermediate_Badge20230604-28-v0xb6j_page-0001.jpg" alt="">
                         <p style="text-align: center; font:bold;">IBM Power Systems</p>
-                    </a>
+                    </a> -->
                 </div>
             </section>
 
