--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
-                    <ul class="nav__list">
+                    <ul style="color: white; "class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#edu" class="nav__link">Education</a></li>
-                        <li class="nav__item"><a href="#exp" class="nav__link">Experience</a></li>
+                        <li class="nav__item"><a href="#edu" class="nav__link">Experience</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
@@ -192,10 +192,6 @@
                         <img src="assets/img/NSE_1_Certification_page-0001.jpg" alt="">
                         <p style="text-align: center; font:bold;">NSE 1</p>
                     </a>
-                    <a href="" class="work__img">
-                        <img src="NSE_2_Certification_page-0001.jpg" alt="">
-                        <p style="text-align: center; font:bold;">NSE 2</p>
-                    </a>
                     <!-- <a href="" class="work__img">
                         <img src="IBM_Supply_Chain_Intelligence_Suite_Technical_Sales_Intermediate_Badge20230531-28-5mklk8_page-0001.jpg" alt="">
                         <p style="text-align: center; font:bold;">Supply Chain Suite</p>
@@ -234,7 +230,7 @@
             <div class="footer__social">
                 <a href="https://www.facebook.com/" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="https://www.instagram.com/brianmurkong" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="https://twitter.com/brayoountamed" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://twitter.com/" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
             <p class="footer__copy">&#169; 2024. All rigths reserved</p>
         </footer>
