--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li class="nav__item"><a href="#edu" class="nav__link">Experience</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-                        <li class="nav__item"><a href="https://drive.google.com/drive/folders/1T4bQbLTuQhikVAfzRRQ9HmBkVA0fOw3P" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="https://drive.google.com/drive/folders/1T4bQbLTuQhikVAfzRRQ9HmBkVA0fOw3P" class="nav__link">Infoa></li>
                     </ul>
                 </div>
 
