--- a/index.html
+++ b/index.html
@@ -49,16 +49,40 @@
                     <br />Android Flutter Developer
                 </h1>
                 <h1 class="home__title-color"></h1>
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="https://raw.githubusercontent.com/murkong/portfolio_web/main/assets/docs/English_curriculum _vitae.pdf" class="nav-link" target="_blank">Resume Eng</a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://raw.githubusercontent.com/murkong/portfolio_web/main/assets/docs/Autobiography.pptx" class="nav-link" target="_blank">Autobiography Pptx</a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://youtu.be/LVyX1rzTHRE?si=qfhYT_YttCNxAylB" class="nav-link" target="_blank">Video Presentation</a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="https://raw.githubusercontent.com/murkong/portfolio_web/main/assets/docs/Oral Tradition.pptx" class="nav-link" target="_blank">Oral Tradition</a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="https://raw.githubusercontent.com/murkong/portfolio_web/main/assets/docs/Kiswahili_maelezo ya wasifu binafsi.pdf" class="nav-link" target="_blank">Resume Kisw</a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="https://raw.githubusercontent.com/murkong/portfolio_web/main/assets/docs/Kalenjin_arurotik chuk.pdf" class="nav-link" target="_blank">Resume Kalenjin</a>
+                    </li>
+    
+                </ul>
 
                 <a href="#contact" class="button">Contact</a>
                 <a href="https://youtu.be/LVyX1rzTHRE?si=qfhYT_YttCNxAylB"
                     class="button">Video</a>
-                <a href="https://github.com/murkong/portflio_data/upload"
+                <li><a href="https://raw.githubusercontent.com/murkong/portfolio_web/main/assets/docs/Autobiography.pdf"
                     class="button">Resumes</a>
-                <a href="raw.github.com/murkong/portflio_data/upload/English_curriculum _vitae.pdf"
-                    class="button">Resumes</a>
-                    <a href="https://github.com/murkong/impaired_app"
-                    class="button">Project</a>
+                </li>
+                
+                <a href="https://raw.githubusercontent.com/murkong/portfolio_web/main/assets/docs/Autobiography.pdf"
+                    class="button">ResumeB</a>
+                <li><a href="https://github.com/murkong/impaired_app"class="button">Project</a>
+
+                </li>
 
                 <!-- <a href="https://drive.google.com/file/d/1x9LjY56Fs6-zWKUV7oHdByoqE1ynpYX1/view?usp=drive_link"
                     class="button">Resume2</a>
