--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
                     <li class="list-inline-item">
                       <a href="https://raw.githubusercontent.com/murkong/portfolio_web/main/assets/docs/Kalenjin_arurotik chuk.pdf" class="nav-link" target="_blank">Resume Kalenjin</a>
                     </li>
+                    <li class="list-inline-item">
+                        <a href="ttps://github.com/murkong/impaired_app" class="nav-link" target="_blank">Project</a>
+                      </li>
     
                 </ul>
-
+<!-- 
                 <a href="#contact" class="button">Contact</a>
                 <a href="https://youtu.be/LVyX1rzTHRE?si=qfhYT_YttCNxAylB"
                     class="button">Video</a>
@@ -82,7 +85,7 @@
                     class="button">ResumeB</a>
                 <li><a href="https://github.com/murkong/impaired_app"class="button">Project</a>
 
-                </li>
+                </li> -->
 
                 <!-- <a href="https://drive.google.com/file/d/1x9LjY56Fs6-zWKUV7oHdByoqE1ynpYX1/view?usp=drive_link"
                     class="button">Resume2</a>
